[package]
name = "starbase-tools"
version = "0.1.0"
edition = "2018"
authors = ["Sam Galizia <samgalizia@pm.me>"]
description = "A collection of tools created to help with ship building in the game Starbase by FrozenByte"
repository = "https://github.com/sgalizia/starbase-tools"
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
